# git-lfs-transfer

./: .gitignore  CMakeLists.txt  README.md  git-lfs-transfer.cpp  ssh_adapter.md
cmake/: CompilerWarnings.cmake  StandardSettings.cmake
include/git-lfs-transfer/: lfs_object.h  log.h  protocol.h  repository.h
src/: CMakeLists.txt  lfs_object.cpp  log.cpp  main.cpp  protocol.cpp  repository.cpp
tests/: CMakeLists.txt  test_lfs_object.cpp  test_protocol.cpp  test_repository.cpp
